...
            android:text="Connectez-vous à votre compte"
            android:textColor="@color/darkGreen"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:padding="15dp"
...
            android:clickable="true"
            android:focusable="true"
            android:gravity="left"
            android:orientation="horizontal" >

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_password_icon"
            android:drawableLeft="@drawable/ic_password_icon"
            android:drawablePadding="15dp"
...
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="235dp"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            />

        </LinearLayout>
...
            android:layout_gravity="right"

            android:layout_marginBottom="10dp"
            android:text="Mot de passe oublié ?" />

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Se souvenir de moi" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/darkGreen"
            android:radius="30dp"
            android:layout_marginBottom="40dp"
            android:text="Connexion" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="- OU -" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_inscription_button"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:text="Inscription" />
...
