...
            android:id="@+id/return_icon"
            android:layout_width="@dimen/icon_dimensions"
            android:layout_height="@dimen/icon_dimensions"
            android:layout_marginStart="@dimen/label_side_margin"
            android:contentDescription="@string/ic_close_description"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@+id/button_return_list_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_return_list_product"
            app:tint="@color/dark_green" />

        <Button
            android:id="@+id/button_return_list_product"
...
            android:lineSpacingExtra="8sp"
            android:text="@string/text_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/AlimentName"
            app:layout_constraintStart_toStartOf="@+id/AlimentName" />

        <TextView
            android:id="@+id/text_asterisk"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
...
            android:lineSpacingExtra="8sp"
            android:text="@string/text_quantite"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/AlimentQuantite"
            app:layout_constraintStart_toStartOf="@+id/AlimentQuantite" />

        <TextView
            android:id="@+id/text_asterisk_quantie"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
...
            android:lineSpacingExtra="8sp"
            android:text="@string/text_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/button_date_select"
            app:layout_constraintStart_toStartOf="@+id/AlimentQuantite" />

        <TextView
            android:id="@+id/text_asterisk_date"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
...
            android:lineSpacingExtra="8sp"
            android:text="@string/text_categorie"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/categorie_spinner"
            app:layout_constraintStart_toStartOf="@+id/AlimentQuantite" />

        <TextView
            android:id="@+id/text_asterisk_category"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categorie_spinner" />

        <!-- Button Add Forms Data   -->
        <Button
            android:id="@+id/button_add_aliment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"
            android:textColor="@color/dark_grey"
            android:layout_marginTop="@dimen/form_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
...
